// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Question editor oboToSlate converts an OboNode to a Slate node 1`] = `
Object {
  "data": Object {
    "content": Object {
      "solution": Object {},
    },
  },
  "key": "mockKey",
  "nodes": Array [
    Object {
      "args": Object {
        "type": "ObojoboDraft.Chunks.Break",
      },
      "mock": "oboToSlate",
    },
    Object {
      "args": Object {
        "type": "ObojoboDraft.Chunks.MCAssessment",
      },
      "mock": "oboToSlate",
    },
    Object {
      "nodes": Array [
        Object {
          "args": Object {},
          "mock": "oboToSlate",
        },
      ],
      "object": "block",
      "type": "ObojoboDraft.Chunks.Question.Solution",
    },
  ],
  "object": "block",
  "type": "mockType",
}
`;

exports[`Question editor oboToSlate converts an OboNode to a Slate node without a solution 1`] = `
Object {
  "data": Object {
    "content": Object {},
  },
  "key": "mockKey",
  "nodes": Array [
    Object {
      "args": Object {
        "type": "ObojoboDraft.Chunks.Break",
      },
      "mock": "oboToSlate",
    },
    Object {
      "args": Object {
        "type": "ObojoboDraft.Chunks.MCAssessment",
      },
      "mock": "oboToSlate",
    },
  ],
  "object": "block",
  "type": "mockType",
}
`;

exports[`Question editor slateToObo converts a Slate node to an OboNode for NumericAssessment 1`] = `
Object {
  "children": Array [
    undefined,
    undefined,
  ],
  "content": Object {
    "solution": undefined,
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`Question editor slateToObo converts a Slate node to an OboNode with content 1`] = `
Object {
  "children": Array [
    Object {
      "args": Object {
        "nodes": Array [
          Object {
            "type": "mockNode",
          },
        ],
        "type": "oboeditor.component",
      },
      "mock": "slateToObo",
    },
    Object {
      "args": Object {
        "type": "ObojoboDraft.Chunks.MCAssessment",
      },
      "mock": "slateToObo",
    },
  ],
  "content": Object {
    "solution": Object {
      "args": Object {
        "nodes": Array [
          Object {
            "type": "mockNode",
          },
        ],
        "type": "oboeditor.component",
      },
      "mock": "slateToObo",
    },
  },
  "id": "mockKey",
  "type": "mockType",
}
`;
